Amarok ChangeLog
================
(C) 2002-2009 the Amarok authors.


VERSION 2.2.2
  FEATURES
    * Show HTML info for podcast channels that support this. Patches by Mathias Panzenböck.
    * Ampache Service now shows Service info from last.fm
    * Moodbar support is back. Can be shown in prgress bar or in the playlist.
      The 4 visual styles from Amarok 1 (normal, angry, frozen and happy) are 
      all supported.
    * Cover images can now be fetched via HTTP. (BR 176899)
    * Custom Labels has returned.  Assign labels from the tag dialog, and
      see them in the tag dialog or in the playlist.
    * Fetch labels from last.fm for some tracks [UPDATE THIS ONCE WE FIGURE OUT WHEN TO DO SO]

  CHANGES:
    * Magnatune.com store: Better status message when downloading albums.
    * Moved the "Playlist Layout" button into the main menu, as the playlist
      toolbar was becoming too crowded.
    * New interface for repeat and random playback modes. Interface now correctly
      represents the actual behaviour (ony one mode can be active at any time)
      and is accessible directly from the playlist toolbar.
    * Usability: Added tooltips all over the place, improved existing ones.
    * Usability improvements for the Ampache service settings dialog.
    * Length and size of queued tracks are now shown in the statusbar tooltip. (BR 144471)
    * Improved Cover fetching. Changed Dialog so the user can select from
      possible covers.
    * Improved guessing tags from filename. Added preview to Dialog.

  BUGFIXES:
    * Made dragging from the Last.fm service directly to the playlist work.
      (BR 215494)
    * Fixed crash during copying to collection with custom file naming schemes
      where a component would be empty. (BR 211518)
    * Magnatune.com store: Fixed incorrect download urls for non english 
      languages. (BR 212126)
    * Magnatune.com store: Fixed membership type not remembered when running 
      a non english Amarok. (BR 195427)